confusion matrice and important future

--- a/src/suppervise.ipynb
+++ b/src/suppervise.ipynb
@@ -58,74 +58,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
+    "# Normalize data\n",
+    "scaler = StandardScaler()\n",
+    "X_num = X.select_dtypes(include=['float64','int64']).drop(columns=['chgt_dir'])\n",
+    "num_columns = X_num.columns\n",
+    "X_num_norm = scaler.fit_transform(X_num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# num_cat_columns = pd.concat([X_num_norm, X_cat], axis=1).columns\n",
+    "X_num_cat = pd.concat([pd.DataFrame(X_num_norm), X_cat], axis=1)\n",
+    "num_cat_columns = num_columns.tolist()\n",
+    "num_cat_columns.extend(cat_columns.tolist())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "from sklearn import tree\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.model_selection import StratifiedKFold, cross_val_score\n",
+    "from sklearn.model_selection import StratifiedKFold, cross_val_score, cross_validate\n",
+    "\n",
     "from sklearn.model_selection import cross_val_predict\n",
     "from sklearn import metrics\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "\n",
+    "from sklearn.metrics import confusion_matrix, ConfusionMatrixDisplay\n",
     "\n",
     "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "from sklearn.metrics import DetCurveDisplay, RocCurveDisplay\n",
+    "\n",
     "\n",
     "\n",
     "from sklearn.impute import SimpleImputer\n",
-    "\n",
-    "rdforest = RandomForestClassifier(class_weight='balanced',random_state=42)#,max_depth=5\n",
+    "# create an instance of the RandomForestClassifier class\n",
+    "rdforest = RandomForestClassifier(class_weight='balanced',random_state=42,max_depth=6,min_samples_leaf=2, min_samples_split=10, n_estimators=50) #min_samples_leaf=2, min_samples_split=10, n_estimators=50\n",
+    "# define a grid of hyperparameters to search over\n",
+    "param_grid = {\n",
+    "    'n_estimators': [50, 100, 200],\n",
+    "    'max_depth': [5, 10, None],\n",
+    "    'min_samples_split': [2, 5, 10],\n",
+    "    'min_samples_leaf': [1, 2, 4]\n",
+    "}\n",
     "\n",
     "lst_classif = [rdforest]\n",
     "lst_classif_names = ['Random Forest']\n",
+    "class_names = list(map(str, data['rdv'].unique()))\n",
     "\n",
-    "def accuracy_score(lst_classif,lst_classif_names,X,y):\n",
-    "   \n",
     "\n",
+    "def accuracy_score(X,y):\n",
     "    for clf,name_clf in zip(lst_classif,lst_classif_names):\n",
+    "        # grid_search = GridSearchCV(clf, param_grid, cv=5, n_jobs=-1)\n",
+    "        # grid_search.fit(X, y)\n",
+    "\n",
+    "        # # print the best hyperparameters and the corresponding validation score\n",
+    "        # print(\"Best Hyperparameters:\", grid_search.best_params_)\n",
+    "        # print(\"Validation Score:\", grid_search.best_score_)\n",
     "        skf = StratifiedKFold(n_splits=5,shuffle=True)\n",
     "        scores = cross_val_score(clf, X, y, cv=skf)\n",
-    "        print(\"Mean cross validation score of \"+name_clf+\" classifier on cross-validation: %0.2f (+/- %0.2f)\" % (scores.mean(), scores.std() * 2))\n",
+    "        pass\n",
     "\n",
-    "def confusion_matrix(lst_classif,lst_classif_names,X,y):\n",
+    "\n",
+    "def confusion_matrix(X,y, datatype):\n",
     "    for clf,name_clf in zip(lst_classif,lst_classif_names):\n",
     "        predicted = cross_val_predict(clf, X, y, cv=5) \n",
     "        print(\"Accuracy of \"+name_clf+\" classifier on cross-validation: %0.2f\" % metrics.accuracy_score(y, predicted))\n",
-    "        print(metrics.confusion_matrix(y, predicted))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'RandomForestClassifier' object has no attribute 'cost_complexity_pruning_path'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[39], line 15\u001b[0m\n\u001b[1;32m      9\u001b[0m X_num_norm \u001b[39m=\u001b[39m scaler\u001b[39m.\u001b[39mfit_transform(X_num)\n\u001b[1;32m     12\u001b[0m \u001b[39m# accuracy_score(lst_classif,lst_classif_names, X_num_norm, y)\u001b[39;00m\n\u001b[1;32m     13\u001b[0m \u001b[39m# confusion_matrix(lst_classif,lst_classif_names, X_num_norm, y)\u001b[39;00m\n\u001b[0;32m---> 15\u001b[0m path \u001b[39m=\u001b[39m rdforest\u001b[39m.\u001b[39;49mcost_complexity_pruning_path(X_num_norm, y)\n\u001b[1;32m     16\u001b[0m ccp_alphas, impurities \u001b[39m=\u001b[39m path\u001b[39m.\u001b[39mccp_alphas, path\u001b[39m.\u001b[39mimpurities\n\u001b[1;32m     18\u001b[0m \u001b[39mprint\u001b[39m(ccp_alphas,impurities)\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'RandomForestClassifier' object has no attribute 'cost_complexity_pruning_path'"
-     ]
-    }
-   ],
-   "source": [
-    "from sklearn.preprocessing import StandardScaler\n",
-    "# 3 - Cluster\n",
-    "# Normalize data\n",
-    "scaler = StandardScaler()\n",
-    "# TODO\n",
-    "X_num = X.select_dtypes(include=['float64','int64']).drop(columns=['chgt_dir'])\n",
-    "num_columns = X_num.columns\n",
-    "\n",
-    "X_num_norm = scaler.fit_transform(X_num)\n",
-    "\n",
-    "\n",
-    "accuracy_score(lst_classif,lst_classif_names, X_num_norm, y)\n",
-    "confusion_matrix(lst_classif,lst_classif_names, X_num_norm, y)\n",
-    "\n"
+    "        cm = metrics.confusion_matrix(y, predicted)\n",
+    "        disp = ConfusionMatrixDisplay(confusion_matrix=cm,display_labels=class_names)\n",
+    "        disp.plot()\n",
+    "        plt.savefig('fig/confusion_matrix_{}'.format(datatype))\n",
+    "        plt.close()\n",
+    "    pass"
    ]
   },
   {
@@ -134,21 +152,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "accuracy_score(lst_classif,lst_classif_names, X_cat.to_numpy(), y)\n",
-    "confusion_matrix(lst_classif,lst_classif_names,X_cat.to_numpy(), y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# columns_num_cat = pd.concat([X_num_norm, X_cat], axis=1).columns\n",
+    "def important_features(X,columns,type_features):\n",
+    "    rdforest.fit(X, y)\n",
     "\n",
-    "X_num_cat = pd.concat([pd.DataFrame(X_num_norm), X_cat], axis=1)\n",
-    "accuracy_score(lst_classif,lst_classif_names, X_num_cat.to_numpy(), y)\n",
-    "confusion_matrix(lst_classif,lst_classif_names,X_num_cat.to_numpy(), y)\n"
+    "    importances = rdforest.feature_importances_\n",
+    "\n",
+    "    forest_importances = pd.Series(importances, index=columns)\n",
+    "    std = np.std([tree.feature_importances_ for tree in rdforest.estimators_], axis=0)\n",
+    "\n",
+    "\n",
+    "    fig, ax = plt.subplots()\n",
+    "    fig.set_size_inches(6,8)\n",
+    "    \n",
+    "    forest_importances.plot.bar(yerr=std, ax=ax)\n",
+    "    ax.set_title(\"Feature importances using MDI\")\n",
+    "    ax.set_ylabel(\"Mean decrease in impurity\")\n",
+    "    fig.tight_layout()\n",
+    "    plt.savefig('fig/important_features_{}'.format(type_features))\n",
+    "    plt.show()\n",
+    "    plt.close()"
    ]
   },
   {
@@ -158,19 +180,43 @@
    "outputs": [],
    "source": [
     "from sklearn import tree\n",
-    "\n",
-    "class_names = list(map(str, data['rdv'].unique()))\n",
-    "\n",
-    "rdforest.fit(X_cat, y)\n",
-    "\n",
-    "\n",
     "# Plot decision tree for one of the trees in the forest\n",
-    "plt.figure(figsize=(200,100))\n",
-    "tree.plot_tree(rdforest.estimators_[0], feature_names=cat_columns, class_names=class_names, filled=True,fontsize=40)\n",
+    "def plot_decision_tree(X,y,columns,type_tree):\n",
+    "    rdforest.fit(X, y)\n",
+    "    plt.figure(figsize=(20,10))\n",
+    "    tree.plot_tree(rdforest.estimators_[0], feature_names=columns, class_names=class_names, filled=True,fontsize=9)\n",
+    "    plt.subplots_adjust(hspace=3)\n",
+    "    plt.savefig('fig/decision_tree_{}'.format(type_tree))\n",
+    "    plt.close()\n",
     "\n",
-    "plt.savefig('fig/categorical_decision_tree')\n",
-    "plt.close()\n",
-    "\n"
+    "    #Large plotting for interpretation\n",
+    "    plt.figure(figsize=(100,10))\n",
+    "    tree.plot_tree(rdforest.estimators_[0], feature_names=columns, class_names=class_names, filled=True,fontsize=11)\n",
+    "    plt.subplots_adjust(hspace=3)\n",
+    "    plt.savefig('fig/decision_tree_{}_large'.format(type_tree))\n",
+    "    plt.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# accuracy_score(X_num_cat.to_numpy(), y)\n",
+    "# accuracy_score( X_num_norm, y)\n",
+    "# accuracy_score( X_cat.to_numpy(), y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# confusion_matrix(X_num_norm, y,\"num\")\n",
+    "# confusion_matrix(X_cat.to_numpy(), y,\"cat\")\n",
+    "# confusion_matrix(X_num_cat.to_numpy(), y, \"num_cat\")"
    ]
   },
   {
@@ -181,12 +227,10 @@
    "source": [
     "\n",
     "\n",
-    "rdforest.fit(X_num, y)\n",
-    "# Plot decision tree for one of the trees in the forest\n",
-    "plt.figure(figsize=(200,100))\n",
-    "tree.plot_tree(rdforest.estimators_[0], feature_names=num_columns, class_names=class_names, filled=True,fontsize=40)\n",
-    "plt.savefig('fig/numerical_decision_tree')\n",
-    "plt.close()\n"
+    "\n",
+    "# plot_decision_tree(X_cat, y, cat_columns , \"categorical\")\n",
+    "# plot_decision_tree(X_num_norm, y, num_columns,\"numerical\")\n",
+    "# plot_decision_tree(X_num_cat, y, num_cat_columns,\"categorical_numerical\")"
    ]
   },
   {
@@ -196,15 +240,26 @@
    "outputs": [],
    "source": [
     "\n",
-    "columns_num_cat = num_columns.tolist()\n",
-    "columns_num_cat.extend(cat_columns.tolist())\n",
-    "\n",
-    "rdforest.fit(X_num_cat, y)\n",
-    "# Plot decision tree for one of the trees in the forest\n",
-    "plt.figure(figsize=(200,100))\n",
-    "tree.plot_tree(rdforest.estimators_[0], feature_names=columns_num_cat, class_names=class_names, filled=True,fontsize=40)\n",
-    "plt.savefig('fig/categorical_numerical_decision_tree')\n",
-    "plt.close()\n"
+    "# important_features(X_num_cat,num_cat_columns,\"num_cat\")\n",
+    "# important_features(X_cat,cat_columns,\"cat\")\n",
+    "# important_features(X_num_norm,num_columns,\"num\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_lists = [X_num_norm, X_cat.to_numpy(), X_num_cat.to_numpy()]\n",
+    "data_columns = [num_columns,cat_columns, num_cat_columns]\n",
+    "data_type_label = [\"numerical\",\"categorical\", \"categorical_numerical\"]\n",
+    "zipped_data = list(zip(X_lists, data_columns, data_type_label))\n",
+    "for X_data, columns, label in zipped_data:\n",
+    "    accuracy_score(X_data, y)\n",
+    "    confusion_matrix(X_data, y,label)\n",
+    "    plot_decision_tree(X_data, y, columns , label)\n",
+    "    important_features(X_data,columns,label)"
    ]
   }
  ],
